we've got you covered == we'll take care of your needs

--- a/201506/ingress-report-2015-06-12-chs.html
+++ b/201506/ingress-report-2015-06-12-chs.html
@@ -178,7 +178,7 @@
 				<tr>
 					<td style="border-bottom-style:solid;border-bottom-color:#403f41;border-bottom-width:2px;font-size:17px;letter-spacing:.1em;padding-bottom:.2em;padding-top:.5em;text-transform:uppercase">
 <div>
-							ZIP CAR HAS YOU COVERED
+							ZIP CAR 懂你所需
 						</div>
 					</td>
 				</tr>
